kubernetes/guestbook-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: web
  selector:
    app: guestbook-backend
