kubernetes/guestbook-prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-guestbook
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus-guestbook
